gone (not backward compatible). You will need to manually add scopes to your
clients, e.g. in mogno console:

  db.oauth2.clients.update({}, { $set: { scopes: ["read", "write"] } }, true, true)

Rack::OAuth2::Server class methods get register -- for registering and updating
client application record -- and get_token_for -- to obtain new/existing token.

Web console now allows you to set/unset individual scopes for each client
application.

Added Sammy.js OAuth 2.0 plugin.


2010-11-12 version 1.4.6

Added Railtie support for Rails 3.x and now running tests against both Rails
2.x and 3.x.


2010-11-11 version 1.4.5

Cosmetic changes to UI. Added throbber and error messages when AJAX requests go
foul. Header on the left, sign-out on the right, as most people expect it.
Client name is no longer a link to the site, site link shown separately.


2010-11-10 version 1.4.4

Added a practice server. You can use it to test your OAuth 2.0 client library.
To fire up the practice server: oauth2-server practice

Bumped up dependencies on Rack 1.1 or later, Sinatra 1.1 or later.


2010-11-09 version 1.4.3

Renamed Rack::OAuth2::Server::Admin to just Rack::OAuth2::Admin.

Checked in config.ru, I use this for testing the Web console.


2010-11-09 version 1.4.2

Fix to commend line tool to properly do authentication.

Added Sinatra as dependency.


2010-11-09 version 1.4.1

Fix to command line tool when accessing MongoDB with username/password.


2010-11-09 version 1.4.0

If authorization handle is passed as request parameter (the recommended way),
then you can call oauth.grant! with a single argument and oauth.deny! with no
arguments.

You can now call oauth.deny! at any point during the authorization flow, e.g.
automatically deny all requests based on scope and client.

To deny access, return status code 403 (was, incorrectly 401). Or just use
oauth.deny!.

Web console gets template_url setting you can use to map access token identity